# dunecore

./: CMakeLists.txt  CMakePresets.json  README.md
dunecore/: CMakeLists.txt
dunecore/ArtSupport/: ArtServiceHelper.cxx  ArtServiceHelper.h  ArtServicePointer.h  ArtServiceProvider.h  CMakeLists.txt  DuneContextManager.cxx  DuneContextManager.h  DuneToolManager.cxx  DuneToolManager.h  ToolRedirector.cxx  ToolRedirector.h  aclic_ArtServiceHelper.h  classes.h  classes_def.xml
dunecore/ChannelMap/: CMakeLists.txt  FDHDChannelMapSP.cxx  FDHDChannelMapSP.h  FDHDChannelMapService.fcl  FDHDChannelMapService.h  FDHDChannelMapService_service.cc  FDHDChannelMap_v1_visiblewires.txt  FDHDChannelMap_v1_wireends.txt  FDHD_CrateMap_v1.txt  PDVDPDMapAlg.hh  PDVDPDMapAlg_tool.cc  PDVD_PDS_Mapping_v04152025.json  PDVD_PDS_Mapping_v07082025.json  PDVD_PDS_Mapping_v09162025.json  README.md  TPCChannelMapSP.cxx  TPCChannelMapSP.h  TPCChannelMapService.h  TPCChannelMapService_service.cc
dunecore/ChannelStatus/: CMakeLists.txt  ToolBasedChannelStatus.cxx  ToolBasedChannelStatus.h  ToolBasedChannelStatusService.cxx  ToolBasedChannelStatusService.h  ToolBasedChannelStatusService_service.cc
dunecore/DAQTriggerSim/: CMakeLists.txt  TriggerAna.fcl  TriggerAna_module.cc  triggerana_job.fcl
dunecore/DuneCommon/: CMakeLists.txt  CompactRealDftData.h  DuneFFT.cxx  DuneFFT.h  DuneTimeConverter.h  FftwReal2dDftData.h  Fw2dFFT.cxx  Fw2dFFT.h  FwFFT.cxx  FwFFT.h  GausRmsFitter.cxx  GausRmsFitter.h  GausStepFitter.cxx  LineColors.h  Real2dData.h  Real2dDftData.h  RealDftData.h  RealDftDataCompact.h  RealDftNormalization.h  RootPalette.cxx  RootPalette.h  SampleTailer.cxx  SampleTailer.h  StringManipulator.cxx  StringManipulator.h  TH1Manipulator.h  TPadManipulator.cxx  TPadManipulator.h  cePulser.h  classes.h  classes_def.xml  coldelecResponse.h  gausTF1.cxx  gausTF1.h  offsetLine.h  quietHistFit.cxx  quietHistFit.h  shiftHistFit.cxx  shiftHistFit.h  valgrind_dune.sup
dunecore/DuneInterface/: AdcChannelData.h  AdcChannelDataCopyService.h  AdcChannelNoiseRemovalService.h  AdcCompressService.h  AdcCountSelection.h  AdcDeconvolutionService.h  AdcDistortionService.h  AdcMitigationService.h  AdcNoiseRemovalService.h  AdcRoiBuildingService.h  AdcRoiFindingService.h  AdcSignalFindingService.h  AdcSuppressService.h  AdcTypes.h  AdcWireBuildingService.h  BaseTriggerService.h  CMakeLists.txt  ChannelGroupService.h  ChannelMappingService.h  ChannelNoiseService.h  MultiAdcSuppressService.h  PedestalAdditionService.h  PedestalEvaluationService.h  README.md  RawDigitExtractService.h  RawDigitPrepService.h  SignalShapingService.h  SimChannelExtractService.h  WiredAdcChannelDataMap.h
dunecore/DuneObj/: CMakeLists.txt  CalibTreeRecord.cxx  CalibTreeRecord.cxx.dead  CalibTreeRecord.h  CalibTreeRecord.h.disabled  DUNEHDF5FileInfo.h  DUNEHDF5FileInfo2.h  EventRecord.cxx  EventRecord.h  OpDetDivRec.cxx  OpDetDivRec.h  PDSPTPCDataInterfaceParent.h  ProtoDUNEBeamEvent.cxx  ProtoDUNEBeamEvent.h  ProtoDUNEBeamSpill.cxx  ProtoDUNEBeamSpill.h  ProtoDUNETimeStamp.cxx  ProtoDUNETimeStamp.h  RDStatus.h  SimpleBeamParticle.c++  SimpleBeamParticle.h  classes.h  classes_def.xml
dunecore/DuneObjDumpers/: CMakeLists.txt  DumpOpDetDivRecs_module.cc  dump_opdetdivrec.fcl
dunecore/DuneServiceAccess/: CMakeLists.txt  DuneServiceAccess.cxx  DuneServiceAccess.h  LarsoftServiceAccess.cxx  LarsoftServiceAccess.h
dunecore/Geometry/: AdcChannelDataTester.cxx  AdcChannelDataTester.h  AuxDetGeoObjectSorter35.cxx  AuxDetGeoObjectSorter35.h  AuxDetGeoObjectSorter35_tool.cc  AuxDetGeoObjectSorterYZX.cxx  AuxDetGeoObjectSorterYZX.h  AuxDetGeoObjectSorterYZX_tool.cc  CMakeLists.txt  CRPCBChannelMapAlg.cxx  CRPCBChannelMapAlg.h  CRPChannelMapAlg.cxx  CRPChannelMapAlg.h  CRPWireReadoutGeom.cxx  CRPWireReadoutGeom.h  ChannelGeo.cxx  ChannelGeo.h  ChannelMap35Alg.cxx  ChannelMap35Alg.h  ChannelMap35OptAlg.cxx  ChannelMap35OptAlg.h  ChannelMapAPAAlg.cxx  ChannelMapAPAAlg.h  ChannelMapCRMAlg.cxx  ChannelMapCRMAlg.h  ChannelMapCRUAlg.cxx  ChannelMapCRUAlg.h  CheckCRPGeometry_module.cc  CheckDPhaseGeometry_module.cc  CheckGeometry_module.cc  ColdBox2ChannelMapAlg.cxx  ColdBox2ChannelMapAlg.h  ColdBoxChannelMapAlg.cxx  ColdBoxChannelMapAlg.h  ColdBoxWireReadoutGeom.cxx  ColdBoxWireReadoutGeom.h  Comparators.cxx  Comparators.h  DUNEGeometryHelper.h  DUNEGeometryHelper_service.cc  (+80 more)
dunecore/HDF5Utils/: CMakeLists.txt  HDF5RawFile2Service.h  HDF5RawFile2Service_service.cc  HDF5RawFile3Service.h  HDF5RawFile3Service_service.cc  HDF5RawInput.h  HDF5RawInput2.fcl  HDF5RawInput2.h  HDF5RawInput2_source.cc  HDF5RawInput3.fcl  HDF5RawInput3.h  HDF5RawInput3_source.cc  HDF5RawInput_source.cc  HDF5TPStreamInput2.fcl  HDF5TPStreamInput2.h  HDF5TPStreamInput2_source.cc  HDF5TPStreamInput3.fcl  HDF5TPStreamInput3.h  HDF5TPStreamInput3_source.cc  HDF5Utils.cc  HDF5Utils.h
dunecore/ProducerUtils/: CMakeLists.txt  ProducerUtils.cc  ProducerUtils.h
dunecore/RawDecoding/: CMakeLists.txt  FDHDDataInterface.h  FDHDDataInterface_tool.cc  fdhddatainterface.fcl
dunecore/Utilities/: CMakeLists.txt  CrpGainService.h  CrpGainService_service.cc  DetPedestalServiceDUNE_service.cc  FileCatalogMetadataDUNE.h  FileCatalogMetadataDUNE_service.cc  SignalShapingServiceDUNE.h  SignalShapingServiceDUNE10kt.h  SignalShapingServiceDUNE10kt_service.cc  SignalShapingServiceDUNE34kt.h  SignalShapingServiceDUNE34kt_service.cc  SignalShapingServiceDUNE35t.h  SignalShapingServiceDUNE35t_service.cc  SignalShapingServiceDUNEDPhase.h  SignalShapingServiceDUNEDPhase_service.cc  SignalShapingServiceDUNE_service.cc  TFileMetadataDUNE.h  TFileMetadataDUNE_service.cc  calorimetry_pdune.fcl  channelmapping_dune.fcl  channelstatus_dune.fcl  channelstatus_pdhd.fcl  channelstatus_pdsp.fcl  channelstatus_pdvd.fcl  crp_dune.fcl  databaseutil_dune.fcl  detectorclocks_dune.fcl  detectorproperties_dune.fcl  evd_3x1x1dp.fcl  evd_dune.fcl  evd_dune10kt.fcl  evd_dune10ktworkspace.fcl  evd_dune34kt.fcl  evd_dune35t.fcl  evd_dune35t_data.fcl  evd_dune35t_milliblock.fcl  evd_dune_noped.fcl  evd_dunefd.fcl  (+40 more)
(+777 files in other folders)
