add_subdirectory(ArtSupport)
add_subdirectory(DuneInterface)
include(dunecore::ToolTypes) # Enable simpler building of tools.
add_subdirectory(Utilities)
add_subdirectory(DuneServiceAccess)
add_subdirectory(DAQTriggerSim)
add_subdirectory(DuneCommon)
add_subdirectory(DuneObj)
add_subdirectory(DuneObjDumpers)
add_subdirectory(Geometry)
add_subdirectory(HDF5Utils)
add_subdirectory(ProducerUtils)
add_subdirectory(ChannelMap)
add_subdirectory(RawDecoding)
